styles/style.css
/* ... */
@media (max-width:900px) {
    .media-viewer__tab-container--main-section {
        display: none;
    }
}

.media-viewer__tab-container--fullscreen {
    display: none;
}

.media-viewer__tab-btn {
    margin: 0;
    padding: 0.1em 0.425em;
    border: 1px solid #444;
    border-radius: 10px 10px 0 0;
    background: #cccccc;

}

.media-viewer__tab-btn-vid--selected {
    border-bottom: 1px solid #ccc;
}

.media-viewer__tab-btn svg {
    margin: 0.15em 0.75em 0em 0.75em;
    width: 1.75em;
    fill: #ffffff;
}

.media-viewer__tab-btn-vid--selected svg {
    fill: #15404e;
}

.media-viewer__media-container {
    position: relative;
    box-sizing: border-box;
    box-shadow: 0px 0px 0 1px #444;
    border: 7px #cccccc solid;
    border-radius: 10px;
    background: #ffffff;
}

@media (min-width:900px) {
    .media-viewer__media-container {
        width: 100%;
    }
}

.media-viewer__media-container--subsection {
    box-shadow: 0px -1px 0 0px #444, 1px 0px 0 0px #444, 0px 1px 0 0px #ccc, -1px 0px 0 0px #444;
    border-radius: 10px 10px 0px 0px;
}

@media (max-width: 900px) and (orientation: portrait) {
    .media-viewer__media-container--main-section {
        width: 100%;
    }
}

@media (max-width: 900px) and (orientation: landscape) {
    .media-viewer__media-container--main-section {
        height: 100%;
    }
}

@media (min-width:900px) {
    .media-viewer__media-container--main-section {
        flex: 1;
        min-height: 0;
        display: flex;
        flex-direction: column;
        align-items: center;
    }
}

.media-viewer__media-container--fixed-enlarged {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    border-radius: 10px;
    z-index: 100;
}

.media-viewer__media-container--fullscreen {
    box-shadow: 0px 0px 0 1px #444;
    border-radius: 10px;
}

@media (max-width: 900px) and (orientation: landscape) {
    .media-viewer__media-container--fullscreen {
        height: 100%;
    }
}

@media (max-width: 900px) and (orientation: portrait) {
    .media-viewer__media-container--fullscreen {
        width: 100%;
    }
}

.media-viewer__fullscreen-btn {
    position: absolute;
    bottom: 0;
    right: 0;
    margin: 0;
    box-sizing: border-box;
    width: 2.75em;
    height: 2.75em;
    padding: 0.75em;
    border: none;
    border-radius: 10px 0 0 0;
    background: #ffffff87;
}

.media-viewer__fullscreen-btn--hidden {
    display: none;
}

.media-viewer__fullscreen-btn-icon {
    width: 100%;
    height: 100%;
    fill: #15404e;
}

.media-viewer__fullscreen-btn-icon--hidden {
    display: none;
}

/* section-text */
.section-text__main-container {
    display: flex;
    padding: 4.5em 0;
    flex-direction: column;
    font-size: 1rem;
    background: #363636;
}

.section-text--hidden {
    display: none;
}

.section-text__unshelve-btn {
    display: none;
}

.section-text__text-container {
    display: flex;
    flex-direction: column;
    overflow: auto;
    padding: 0 1em;
    padding: 0 max(1em, env(safe-area-inset-right)) 0 max(1em, env(safe-area-inset-left));
    color: #fff;
    background: inherit;
}

.section-text__header-container {
    display: flex;
    align-items: center;
    flex: 1 0 auto;
    font-size: 1.35em;
}

.section-text__shelve-btn {
    display: none;
    padding: 0;
    border: none;
    color: inherit;
    background: inherit;
    font-weight: 600;
}

.section-text__header-divider {
    display: none;
    margin: 0 1em;
    width: .1em;
    height: 1.25em;
    background: #fff;
}

.section-text__content {
    overflow: auto;
    line-height: 1.34em;
}

.section-text__content a {
    color: #5caac5;
    text-decoration: underline;
}

@media (min-width:480px) {
    .section-text__main-container {
        padding: 4.5em 0 1em 0;
    }
}

@media (min-width:900px) {
    .section-text--shelveable {
        position: absolute;
        right: 0;
        top: 50%;
        transform: translate(0, -50%);
        width: 38%;
        max-height: 94%;
        display: flex;
        flex-direction: column;
    }

    .section-text--transition-instant {
        transition: transform 1s ease 0s;
    }

    .section-text--transition-delay {
        transition: transform 1s ease 1s;
    }

    .section-text--shelved {
        transform: translate(100%, -50%);
    }

    .section-text__main-container {
        min-height: 0;
        flex: 1;
        padding: 0;
    }

    .section-text__main-container-transition-instant {
        transition: visibility 0s ease 0s;
    }

    .section-text__main-container--transition-delay {
        transition: visibility 0s ease 1s;
    }

    .section-text__main-container--hidden {
        visibility: hidden;
    }

    .section-text__main-container--no-learn-more {
        padding-bottom: 1em;
    }

    .section-text__unshelve-btn, .section-text__shelve-btn, .section-text__header-divider {
        display: block;
    }

    .section-text__unshelve-btn {
        position: absolute;
        left: 0;
        top: 0;
        transform: translateX(-100%);
        padding: 0.45em 1.15em 0.45em 0.45em;
        border: none;
        font-size: 1.35em;
        font-weight: 600;
        white-space: nowrap;
        color: #fff;
        background: #363636;
        z-index: 0;
    }

    .section-text__unshelve-btn--transition-instant {
        transition: transform 1s ease 0s, visibility 1s ease 0s;
    }

    .section-text__unshelve-btn--transition-delay {
        transition: transform 1s ease 1s, visibility 0s ease 1s;
    }

    .section-text__unshelve-btn--hidden {
        transform: translateX(0%);
        visibility: hidden;
    }

    .section-text__text-container {
        padding: 0;
    }

    .section-text__header-container {
        padding: 1rem 1rem 0 1rem;
    }

    .section-text__content {
        padding: 0 1em;
    }
}

/* comp-slider */
.comp-slider {
    position: relative;
}
/* ... */

